@@ -46,3 +46,4 @@
 20160714 ./watchlist/hia-iplist.sh updated.
 20160719 ./api/README.txt updated.
 20160917 ./watchlist/l.sh updated.
+20160917 ./watchlist/hia-parse-http.sh updated.
